migrated to null-safety

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -14,13 +14,14 @@ dependencies:
   nwidgets:
     path: ../nwidgets
   cupertino_icons: ^1.0.2
-  dio:
-  equatable:
-  flutter_svg:
+  dio: ^4.0.0-prev3
+  equatable: ^2.0.0
+  flutter_svg: ^0.21.0-nullsafety.0
   tripledes:
-  intl:
-  get_it:
-  webview_flutter:
+    path: ../tripledes-dart-master
+  intl: ^0.17.0
+  get_it: ^6.0.0
+  webview_flutter: ^2.0.2
   
 
 dev_dependencies:
