--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   equatable: ^2.0.0
   flutter_svg: ^0.21.0-nullsafety.0
   tripledes:
-    path: ../tripledes-dart
+    git: https://github.com/nelstein/tripledes-dart.git
   intl: ^0.17.0
   get_it: ^6.0.0
   webview_flutter: ^2.0.2
