--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: nravepay
 description: Accepting payment using Flutterwave in flutter.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
@@ -11,14 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  nwidgets:
-    git: https://github.com/nestuge/nwidgets.git
+  flutter_platform_widgets: ^1.7.1
   cupertino_icons: ^1.0.2
   dio: ^4.0.0-prev3
   equatable: ^2.0.0
   flutter_svg: ^0.21.0-nullsafety.0
-  tripledes:
-    git: https://github.com/nelstein/tripledes-dart.git
+  tripledes_nullsafety:
   intl: ^0.17.0
   get_it: ^6.0.0
   webview_flutter: ^2.0.2
