--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_platform_widgets: ^1.7.1
+  # flutter_platform_widgets: ^1.7.1
   cupertino_icons: ^1.0.2
   dio: ^4.0.0-prev3
   equatable: ^2.0.0
