--- a/example/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/example/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,7 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=/Users/admin/Downloads/flutter
 FLUTTER_APPLICATION_PATH=/Users/admin/Documents/Projects/nravepay/example
+COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
