--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: nravepay
 description: Nravepay is a package that makes accepting card payments in a flutter project easier using Flutterwave.
 homepage: https://github.com/nelstein/nravepay
 
-version: 1.0.1+2
+version: 1.0.2
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -19,6 +19,7 @@ dependencies:
   intl: ^0.17.0
   get_it: ^6.0.0
   webview_flutter: ^2.0.2
+  async: ^2.6.1
   
 
 dev_dependencies:
