--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -12,5 +12,5 @@ jobs:
       - name: '>> Dart package <<'
         uses: k-paxian/dart-package-publisher@master
         with:
-          accessToken: ${{ OAUTH_ACCESS_TOKEN }}
-          refreshToken: ${{ OAUTH_REFRESH_TOKEN }}
+          accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
+          refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
