--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -15,5 +15,6 @@ jobs:
           accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
           refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
           credentialJson: ${{ secrets.CREDENTIAL_JSON }}
+          skipTests: true
           format: true
           flutter: true
