--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -1,6 +1,12 @@
 name: Publish to Pub.dev
 
-on: [push, pull_request]
+on: 
+  pull_request:
+      branches:
+        - main
+    push:
+      branches:
+        - main
 
 jobs:
   publishing:
