--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   intl: ^0.17.0
   get_it: ^6.1.1
   webview_flutter: ^2.0.13
-  # async: ^2.8.2
+  async: ^2.8.1
   
 
 dev_dependencies:
