fix null safety issues

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: nravepay
 description: Nravepay is a package that makes accepting card payments in a flutter project easier using Flutterwave.
 homepage: https://github.com/nelstein/nravepay
 
-version: 1.2.1-dev.5
+version: 1.2.2
 
 
 environment:
@@ -15,10 +15,10 @@ dependencies:
   dio: ^4.0.0
   equatable: ^2.0.3
   flutter_svg: ^0.22.0
-  tripledes_nullsafety: ^1.0.1
+  tripledes_nullsafety: ^1.0.2
   intl: ^0.17.0
   get_it: ^6.1.1
-  webview_flutter: ^2.0.13
+  webview_flutter: ^3.0.0
   flutter_bloc: ^8.0.1
   bloc: ^8.0.2
   async: ^2.8.2
