--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: nravepay
 description: Nravepay is a package that makes accepting card payments in a flutter project easier using Flutterwave.
 homepage: https://github.com/nelstein/nravepay
 
-version: 1.2.2
+version: 1.2.3-dev.0
 
 
 environment:
@@ -11,16 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.3
-  dio: ^4.0.0
+  cupertino_icons: ^1.0.4
+  dio: ^4.0.4
   equatable: ^2.0.3
-  flutter_svg: ^0.22.0
+  websafe_svg: ^2.1.1
   tripledes_nullsafety: ^1.0.2
   intl: ^0.17.0
-  get_it: ^6.1.1
-  webview_flutter: ^3.0.0
+  get_it: ^7.2.0
+  webview_flutter: ^3.0.1
   flutter_bloc: ^8.0.1
-  bloc: ^8.0.2
+  bloc: ^8.0.3
   async: ^2.8.2
   
 
