--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: nravepay
 description: Nravepay is a package that makes accepting card payments in a flutter project easier using Flutterwave.
 homepage: https://github.com/nelstein/nravepay
 
-version: 1.2.3-dev.0
+version: 1.2.3
 
 
 environment:
@@ -15,7 +15,7 @@ dependencies:
   dio: ^4.0.4
   equatable: ^2.0.3
   websafe_svg: ^2.1.1
-  tripledes_nullsafety: ^1.0.2
+  tripledes_nullsafety: ^1.0.3
   intl: ^0.17.0
   get_it: ^7.2.0
   webview_flutter: ^3.0.1
